--- a/theme.cfg
+++ b/theme.cfg
@@ -1,4 +1,4 @@
-name: switchOS
-author: PlayingKarrde
+name: switchOSRP2
+author: dragoonDorise
 version: 0.1
-summary: A simple Switch theme for Pegasus
+summary: A simple Switch theme for Pegasus Fork of PlayingKarrde original work
