--- a/theme.cfg
+++ b/theme.cfg
@@ -1,4 +1,4 @@
-name: switchOSRP2
+name: switchOS-RP2
 author: dragoonDorise
 version: 0.1
-summary: A simple Switch theme for Pegasus Fork of PlayingKarrde original work
+summary: A simple Switch theme for Pegasus Fork of PlayingKarrde original work and filtercollections by Valsou
